[gd_scene load_steps=16 format=2]

[ext_resource path="res://UI/HUD_1.png" type="Texture" id=1]
[ext_resource path="res://UI/HUD_ProgressBarFull.png" type="Texture" id=2]
[ext_resource path="res://UI/HUD_ProgressBarEmpty.png" type="Texture" id=3]
[ext_resource path="res://UI/HUD_2.png" type="Texture" id=4]
[ext_resource path="res://Theme/UI-theme.tres" type="Theme" id=5]
[ext_resource path="res://Theme/ConcertOne-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://UI/HUD.gd" type="Script" id=7]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.968627, 0.819608, 0.235294, 1 )
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="DynamicFont" id=13]
size = 31
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_top = -5
extra_spacing_bottom = 14
font_data = ExtResource( 6 )

[sub_resource type="Theme" id=8]
Button/styles/focus = SubResource( 9 )
Button/styles/hover = SubResource( 10 )
Button/styles/normal = SubResource( 11 )
Button/styles/pressed = SubResource( 12 )
Label/colors/font_color = Color( 1, 1, 1, 1 )
Label/colors/font_color_shadow = Color( 0, 0, 0, 1 )
Label/constants/shadow_offset_x = 1
Label/constants/shadow_offset_y = 2
Label/fonts/font = SubResource( 13 )

[sub_resource type="DynamicFont" id=14]
size = 25
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_top = -5
extra_spacing_bottom = 14
font_data = ExtResource( 6 )

[sub_resource type="Theme" id=15]
Button/styles/focus = SubResource( 9 )
Button/styles/hover = SubResource( 10 )
Button/styles/normal = SubResource( 11 )
Button/styles/pressed = SubResource( 12 )
Label/colors/font_color = Color( 1, 1, 1, 1 )
Label/colors/font_color_shadow = Color( 0, 0, 0, 1 )
Label/constants/shadow_offset_x = 1
Label/constants/shadow_offset_y = 2
Label/fonts/font = SubResource( 14 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 7 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 50.0
margin_top = 50.0
margin_right = 1870.0
margin_bottom = 1030.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 1820.0
margin_bottom = 165.0

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 408.0
margin_bottom = 165.0
rect_min_size = Vector2( 408, 165 )
texture = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="TextureProgress" type="TextureProgress" parent="MarginContainer/VBoxContainer/HBoxContainer/TextureRect"]
margin_left = 102.0
margin_top = 7.0
margin_right = 999.0
margin_bottom = 114.0
rect_scale = Vector2( 0.331831, 0.331831 )
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 2 )

[node name="Especial_timer" type="Timer" parent="MarginContainer/VBoxContainer/HBoxContainer/TextureRect/TextureProgress"]
wait_time = 0.5

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/TextureRect"]
margin_left = 159.0
margin_right = 360.0
margin_bottom = 48.0
rect_pivot_offset = Vector2( 101, 24 )
theme = SubResource( 8 )
text = "Especial"
align = 1
valign = 1

[node name="Points" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/TextureRect"]
margin_left = 175.0
margin_top = 56.0
margin_right = 360.0
margin_bottom = 107.0
rect_pivot_offset = Vector2( 101, 24 )
theme = SubResource( 15 )
text = "Pontos: 9999999"
valign = 1

[node name="MarginContainer2" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer2"]
margin_left = 50.0
margin_top = 50.0
margin_right = 1870.0
margin_bottom = 1030.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer2/VBoxContainer"]
margin_right = 1820.0
margin_bottom = 165.0

[node name="TextureRect" type="TextureRect" parent="MarginContainer2/VBoxContainer/HBoxContainer"]
margin_right = 408.0
margin_bottom = 165.0
rect_min_size = Vector2( 408, 165 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="MarginContainer2/VBoxContainer/HBoxContainer/TextureRect"]
margin_left = -23.0
margin_top = 55.0
margin_right = 178.0
margin_bottom = 103.0
rect_pivot_offset = Vector2( 101, 24 )
theme = ExtResource( 5 )
text = "10"
align = 1
valign = 1

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="MarginContainer/VBoxContainer/HBoxContainer/TextureRect/TextureProgress/Especial_timer" to="." method="_on_Especial_timer_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
